--- a/src/paypay/PaypayForm.fxml
+++ b/src/paypay/PaypayForm.fxml
@@ -40,3 +40,39 @@
         </menus>
       </MenuBar>
       <TabPane layoutX="2.0" layoutY="25.0" prefHeight="698.0" prefWidth="1282.0" tabClosingPolicy="UNAVAILABLE">
+         
+         <tabs>
+          <Tab text="Personal">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="661.0" prefWidth="1238.0">
+                     <children>
+                        <HBox layoutX="-1.0" prefHeight="675.0" prefWidth="1285.0" style="-fx-background-color: abc4ff;">
+                           <children>
+                              <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: b8bc1d3fe8ff;">
+                                 <HBox.margin>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                 </HBox.margin>
+                                 <children>
+                                    <Label alignment="CENTER" contentDisplay="CENTER" layoutY="-5.0" prefHeight="32.0" prefWidth="171.0" text="Paypay" textAlignment="CENTER" textFill="#0077b6">
+                                       <font>
+                                          <Font name="Baloo 2 Medium" size="24.0" />
+                                       </font>
+                                    </Label>
+                                    <TextField fx:id="tfID" layoutY="36.0" prefHeight="25.0" prefWidth="172.0" promptText="ID" />
+                                    <TextField fx:id="tfName" layoutY="69.0" prefHeight="25.0" prefWidth="172.0" promptText="Name" />
+                                    <TextField fx:id="tfAddress" layoutY="104.0" prefHeight="25.0" prefWidth="172.0" promptText="Address" />
+                                    <TextField fx:id="tfEmail" layoutY="140.0" prefHeight="25.0" prefWidth="172.0" promptText="Email" />
+                                    <TextField fx:id="tfNo_hp" layoutY="175.0" prefHeight="25.0" prefWidth="172.0" promptText="Phone Number" />
+                                    <TextField fx:id="tfKTP" layoutY="209.0" prefHeight="25.0" prefWidth="172.0" promptText="KTP" />
+                                    <TextField fx:id="tfSaldo" layoutY="280.0" prefHeight="25.0" prefWidth="172.0" promptText="Saldo" />
+                                    <DatePicker fx:id="dpTgl_lahir" layoutX="-1.0" layoutY="245.0" promptText="Tanggal Lahir" />
+                                    <TextField fx:id="tlCCN" layoutY="330.0" prefHeight="25.0" prefWidth="172.0" promptText="CCN" />
+                                    <TextField fx:id="tfJenis_kartu" layoutY="363.0" prefHeight="25.0" prefWidth="172.0" promptText="Jenis Kartu" />
+                                    <TextField fx:id="tfAlamat_penagihan" layoutY="433.0" prefHeight="25.0" prefWidth="172.0" promptText="Alamat Penagihan" />
+                                    <TextField fx:id="tfSec_num" layoutY="469.0" prefHeight="25.0" prefWidth="172.0" promptText="Security Number" />
+                                    <DatePicker fx:id="dpExp_date" layoutX="-1.0" layoutY="398.0" promptText="Exp Date" />
+                                    <Button fx:id="btnAddAccount" layoutX="-1.0" layoutY="520.0" mnemonicParsing="false" onAction="#handleAddAccountButton" prefHeight="25.0" prefWidth="173.0" text="Add Account" />
+                                    <Button fx:id="btnReload" layoutY="557.0" mnemonicParsing="false" onAction="#handleReloadButton" prefHeight="25.0" prefWidth="172.0" text="Reload Data Table" />
+                                    <Button fx:id="btnClear" layoutY="595.0" mnemonicParsing="false" onAction="#handleClearButton" prefHeight="25.0" prefWidth="172.0" text="Clear Form" />
+                                 </children>
+                              </AnchorPane>
