--- a/src/paypay/PaypayForm.fxml
+++ b/src/paypay/PaypayForm.fxml
@@ -76,3 +76,44 @@
                                     <Button fx:id="btnClear" layoutY="595.0" mnemonicParsing="false" onAction="#handleClearButton" prefHeight="25.0" prefWidth="172.0" text="Clear Form" />
                                  </children>
                               </AnchorPane>
+                              <AnchorPane prefHeight="675.0" prefWidth="1086.0">
+                                 <children>
+                                    <VBox layoutX="-3.0" layoutY="-5.0" prefHeight="678.0" prefWidth="1090.0" style="-fx-background-color: ccdbfd;">
+                                       <children>
+                                          <AnchorPane prefHeight="406.0" prefWidth="1090.0" style="-fx-background-color: f8f7ff;">
+                                             <VBox.margin>
+                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                             </VBox.margin>
+                                             <children>
+                                                <TableView fx:id="tblAkun" layoutX="-2.0" layoutY="-4.0" prefHeight="410.0" prefWidth="1084.0">
+                                                  <columns>
+                                                    <TableColumn fx:id="colID" prefWidth="50.333343505859375" text="ID" />
+                                                    <TableColumn fx:id="ColName" prefWidth="99.66665649414062" text="Name" />
+                                                      <TableColumn fx:id="colAddress" prefWidth="178.66668701171875" text="Address" />
+                                                      <TableColumn fx:id="colEmail" prefWidth="112.33331298828125" text="Email" />
+                                                      <TableColumn fx:id="colNo_hp" prefWidth="130.0" text="Phone Number" />
+                                                      <TableColumn fx:id="colKTP" prefWidth="179.66668701171875" text="KTP" />
+                                                      <TableColumn fx:id="colTgl_lahir" minWidth="0.0" prefWidth="106.3333740234375" text="Tanggal Lahir" />
+                                                      <TableColumn fx:id="colSaldo" prefWidth="228.0" text="Saldo" />
+                                                  </columns>
+                                                </TableView>
+                                             </children>
+                                          </AnchorPane>
+                                          <HBox prefHeight="254.0" prefWidth="862.0" style="-fx-background-color: edf2fb;">
+                                             <VBox.margin>
+                                                <Insets bottom="10.0" left="10.0" right="10.0" />
+                                             </VBox.margin>
+                                             <children>
+                                                <AnchorPane prefHeight="248.0" prefWidth="608.0" style="-fx-background-color: f8f7ff;">
+                                                   <children>
+                                                      <TableView fx:id="tblCard" layoutY="-5.0" prefHeight="254.0" prefWidth="620.0">
+                                                        <columns>
+                                                          <TableColumn fx:id="colCCN" prefWidth="137.0" text="CCN" />
+                                                          <TableColumn fx:id="colJenis_kartu" prefWidth="97.0" text="Jenis Kartu" />
+                                                            <TableColumn fx:id="colExp_date" prefWidth="61.0" text="Exp Date" />
+                                                            <TableColumn fx:id="colAlamat" prefWidth="211.0" text="Alamat Penagihan" />
+                                                            <TableColumn fx:id="colSec_num" prefWidth="113.0" text="Security Number" />
+                                                        </columns>
+                                                      </TableView>
+                                                   </children>
+                                                </AnchorPane>
