--- a/src/paypay/PaypayForm.fxml
+++ b/src/paypay/PaypayForm.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -17,19 +16,18 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="paypay.PaypayController">
+<AnchorPane id="AnchorPane" prefHeight="550.0" prefWidth="670.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="paypay.PaypayController">
    <children>
-      <MenuBar layoutX="-14.0" layoutY="-1.0">
+      <MenuBar layoutY="2.0">
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
               <MenuItem mnemonicParsing="false" text="Close" />
             </items>
           </Menu>
-          <Menu mnemonicParsing="false" text="Transaksi">
+          <Menu mnemonicParsing="false" text="Edit">
             <items>
-              <MenuItem mnemonicParsing="false" text="Deposit" />
-                  <MenuItem mnemonicParsing="false" text="Withdraw" />
+              <MenuItem mnemonicParsing="false" text="Delete" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Help">
@@ -39,120 +37,19 @@
           </Menu>
         </menus>
       </MenuBar>
-      <TabPane layoutX="2.0" layoutY="25.0" prefHeight="698.0" prefWidth="1282.0" tabClosingPolicy="UNAVAILABLE">
-         
-         <tabs>
-          <Tab text="Personal">
-            <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="661.0" prefWidth="1238.0">
-                     <children>
-                        <HBox layoutX="-1.0" prefHeight="675.0" prefWidth="1285.0" style="-fx-background-color: abc4ff;">
+      <AnchorPane layoutY="27.0" prefHeight="473.0" prefWidth="650.0">
+         <children>
+            <TabPane layoutX="-1.0" prefHeight="524.0" prefWidth="670.0" tabClosingPolicy="UNAVAILABLE">
+              <tabs>
+                <Tab text="Personal">
+                  <content>
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: ccdbfd;">
                            <children>
-                              <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: b8bc1d3fe8ff;">
-                                 <HBox.margin>
-                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                 </HBox.margin>
+                              <HBox prefHeight="453.0" prefWidth="151.0">
                                  <children>
-                                    <Label alignment="CENTER" contentDisplay="CENTER" layoutY="-5.0" prefHeight="32.0" prefWidth="171.0" text="Paypay" textAlignment="CENTER" textFill="#0077b6">
-                                       <font>
-                                          <Font name="Baloo 2 Medium" size="24.0" />
-                                       </font>
-                                    </Label>
-                                    <TextField fx:id="tfID" layoutY="36.0" prefHeight="25.0" prefWidth="172.0" promptText="ID" />
-                                    <TextField fx:id="tfName" layoutY="69.0" prefHeight="25.0" prefWidth="172.0" promptText="Name" />
-                                    <TextField fx:id="tfAddress" layoutY="104.0" prefHeight="25.0" prefWidth="172.0" promptText="Address" />
-                                    <TextField fx:id="tfEmail" layoutY="140.0" prefHeight="25.0" prefWidth="172.0" promptText="Email" />
-                                    <TextField fx:id="tfNo_hp" layoutY="175.0" prefHeight="25.0" prefWidth="172.0" promptText="Phone Number" />
-                                    <TextField fx:id="tfKTP" layoutY="209.0" prefHeight="25.0" prefWidth="172.0" promptText="KTP" />
-                                    <TextField fx:id="tfSaldo" layoutY="280.0" prefHeight="25.0" prefWidth="172.0" promptText="Saldo" />
-                                    <DatePicker fx:id="dpTgl_lahir" layoutX="-1.0" layoutY="245.0" promptText="Tanggal Lahir" />
-                                    <TextField fx:id="tlCCN" layoutY="330.0" prefHeight="25.0" prefWidth="172.0" promptText="CCN" />
-                                    <TextField fx:id="tfJenis_kartu" layoutY="363.0" prefHeight="25.0" prefWidth="172.0" promptText="Jenis Kartu" />
-                                    <TextField fx:id="tfAlamat_penagihan" layoutY="433.0" prefHeight="25.0" prefWidth="172.0" promptText="Alamat Penagihan" />
-                                    <TextField fx:id="tfSec_num" layoutY="469.0" prefHeight="25.0" prefWidth="172.0" promptText="Security Number" />
-                                    <DatePicker fx:id="dpExp_date" layoutX="-1.0" layoutY="398.0" promptText="Exp Date" />
-                                    <Button fx:id="btnAddAccount" layoutX="-1.0" layoutY="520.0" mnemonicParsing="false" onAction="#handleAddAccountButton" prefHeight="25.0" prefWidth="173.0" text="Add Account" />
-                                    <Button fx:id="btnReload" layoutY="557.0" mnemonicParsing="false" onAction="#handleReloadButton" prefHeight="25.0" prefWidth="172.0" text="Reload Data Table" />
-                                    <Button fx:id="btnClear" layoutY="595.0" mnemonicParsing="false" onAction="#handleClearButton" prefHeight="25.0" prefWidth="172.0" text="Clear Form" />
-                                 </children>
-                              </AnchorPane>
-                              <AnchorPane prefHeight="675.0" prefWidth="1086.0">
-                                 <children>
-                                    <VBox layoutX="-3.0" layoutY="-5.0" prefHeight="678.0" prefWidth="1090.0" style="-fx-background-color: ccdbfd;">
+                                    <AnchorPane prefHeight="476.0" prefWidth="151.0" style="-fx-background-color: ccdbfd;">
                                        <children>
-                                          <AnchorPane prefHeight="406.0" prefWidth="1090.0" style="-fx-background-color: f8f7ff;">
-                                             <VBox.margin>
-                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                             </VBox.margin>
-                                             <children>
-                                                <TableView fx:id="tblAkun" layoutX="-2.0" layoutY="-4.0" prefHeight="410.0" prefWidth="1084.0">
-                                                  <columns>
-                                                    <TableColumn fx:id="colID" prefWidth="50.333343505859375" text="ID" />
-                                                    <TableColumn fx:id="ColName" prefWidth="99.66665649414062" text="Name" />
-                                                      <TableColumn fx:id="colAddress" prefWidth="178.66668701171875" text="Address" />
-                                                      <TableColumn fx:id="colEmail" prefWidth="112.33331298828125" text="Email" />
-                                                      <TableColumn fx:id="colNo_hp" prefWidth="130.0" text="Phone Number" />
-                                                      <TableColumn fx:id="colKTP" prefWidth="179.66668701171875" text="KTP" />
-                                                      <TableColumn fx:id="colTgl_lahir" minWidth="0.0" prefWidth="106.3333740234375" text="Tanggal Lahir" />
-                                                      <TableColumn fx:id="colSaldo" prefWidth="228.0" text="Saldo" />
-                                                  </columns>
-                                                </TableView>
-                                             </children>
-                                          </AnchorPane>
-                                          <HBox prefHeight="254.0" prefWidth="862.0" style="-fx-background-color: edf2fb;">
-                                             <VBox.margin>
-                                                <Insets bottom="10.0" left="10.0" right="10.0" />
-                                             </VBox.margin>
-                                             <children>
-                                                <AnchorPane prefHeight="248.0" prefWidth="608.0" style="-fx-background-color: f8f7ff;">
-                                                   <children>
-                                                      <TableView fx:id="tblCard" layoutY="-5.0" prefHeight="254.0" prefWidth="620.0">
-                                                        <columns>
-                                                          <TableColumn fx:id="colCCN" prefWidth="137.0" text="CCN" />
-                                                          <TableColumn fx:id="colJenis_kartu" prefWidth="97.0" text="Jenis Kartu" />
-                                                            <TableColumn fx:id="colExp_date" prefWidth="61.0" text="Exp Date" />
-                                                            <TableColumn fx:id="colAlamat" prefWidth="211.0" text="Alamat Penagihan" />
-                                                            <TableColumn fx:id="colSec_num" prefWidth="113.0" text="Security Number" />
-                                                        </columns>
-                                                      </TableView>
-                                                   </children>
-                                                </AnchorPane>
-                                                  <AnchorPane prefHeight="264.0" prefWidth="463.0">
-                                                   <children>
-                                                      <TextField fx:id="tfNewID" layoutX="12.0" layoutY="42.0" prefHeight="25.0" prefWidth="172.0" promptText="ID" />
-                                                      <TextField fx:id="tfNewCCN" layoutX="12.0" layoutY="77.0" prefHeight="25.0" prefWidth="172.0" promptText="CCN" />
-                                                      <TextField fx:id="tfNewJenis_kartu" layoutX="12.0" layoutY="113.0" prefHeight="25.0" prefWidth="172.0" promptText="Jenis Kartu" />
-                                                      <Label layoutX="149.0" layoutY="1.0" text="Tambah Kartu">
-                                                         <font>
-                                                            <Font name="Baloo 2 Regular" size="15.0" />
-                                                         </font>
-                                                      </Label>
-                                                      <TextField fx:id="tfNewExp_date" layoutX="209.0" layoutY="42.0" prefHeight="25.0" prefWidth="172.0" promptText="Exp Date" />
-                                                      <TextField fx:id="tfNewAlamat_penagihan" layoutX="209.0" layoutY="77.0" prefHeight="25.0" prefWidth="172.0" promptText="Alamat Penagihan" />
-                                                      <TextField fx:id="tfNewSec_num" layoutX="209.0" layoutY="114.0" prefHeight="25.0" prefWidth="172.0" promptText="Sec Number" />
-                                                      <Button fx:id="btnAddCard" layoutX="107.0" layoutY="153.0" mnemonicParsing="false" onAction="#handleAddCardButton" prefHeight="25.0" prefWidth="173.0" text="Add Card" />
-                                                   </children>
-                                                </AnchorPane>
-                                             </children>
-                                          </HBox>
-                                       </children>
-                                    </VBox>
-                                 </children>
-                              </AnchorPane>
-                           </children>
-                        </HBox>
-                     </children>
-                  </AnchorPane>
-            </content>
-          </Tab>
-            <Tab text="Bisnis">
-            <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-            </content>
-          </Tab>
-        </tabs>
-      </TabPane>
-      <Label layoutX="989.0" layoutY="3.0" text="DB Status:" />
-      <Label fx:id="lblDBStatus" layoutX="1052.0" layoutY="3.0" />
-   </children>
-</AnchorPane>
+                                          <Label layoutX="57.0" layoutY="6.0" text="Paypay" textFill="#05a1fb">
+                                             <font>
+                                                <Font name="System Bold" size="12.0" />
+                                             </font></Label>
